<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimens_24dp"
    tools:context=".screen.login.LoginScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimens_64dp"
        android:text="@string/text_log_in"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/size_32sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:hint="@string/email"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingTop="@dimen/dimens_16dp"
            android:paddingBottom="@dimen/dimens_16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingTop="@dimen/dimens_16dp"
            android:paddingBottom="@dimen/dimens_16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelForgotPassword"
        style="@style/ClickableContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingTop="@dimen/dimens_8dp"
        android:paddingBottom="@dimen/dimens_8dp"
        android:text="@string/text_forgot_password"
        android:layout_marginBottom="@dimen/dimens_64dp"
        android:textColor="@color/colorIndigo" />

    <FrameLayout
        android:id="@+id/buttonLogin"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/buttonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:visibility="visible"
            style="@style/ButtonPrimaryContent" />

        <ProgressBar
            android:id="@+id/buttonProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            style="?android:attr/progressBarStyleSmall"
            android:indeterminateTint="@color/colorAccent"/>

    </FrameLayout>

</LinearLayout>