<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".screen.initiate.InitiateScreen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_les_private_n_bahasa_inggris"
            android:typeface="sans"
            android:layout_gravity="center"
            android:textSize="@dimen/dimens_40dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dimens_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_8dp">

            <Button
                android:id="@+id/buttonLogin"
                style="@style/ButtonSecondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_log_in" />

            <View
                android:layout_width="@dimen/dimens_8dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/ButtonThird"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_register" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>