<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.login.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimens_64dp"
            android:text="@string/text_daftar"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNamaPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:hint="@string/text_nama_lengkap"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNamaPelanggan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/dimens_16dp"
                android:paddingBottom="@dimen/dimens_16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:hint="@string/text_nama_pengguna"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingTop="@dimen/dimens_16dp"
                android:paddingBottom="@dimen/dimens_16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:hint="@string/email"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/dimens_16dp"
                android:paddingBottom="@dimen/dimens_16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_kata_sandi"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingTop="@dimen/dimens_16dp"
                android:paddingBottom="@dimen/dimens_16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_16dp"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_tulis_ulang_kata_sandi"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingTop="@dimen/dimens_16dp"
                android:paddingBottom="@dimen/dimens_16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_10sp"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:text="@string/text_jenjang_pendidikan"/>

        <Spinner
            android:id="@+id/spinnerLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/dimens_32dp"
            android:paddingTop="@dimen/dimens_16dp"
            android:paddingBottom="@dimen/dimens_16dp"/>

        <FrameLayout
            android:id="@+id/buttonRegister"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_daftar"
                android:visibility="visible"
                style="@style/ButtonPrimaryContent" />

            <ProgressBar
                android:id="@+id/buttonProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                style="?android:attr/progressBarStyleSmall"
                android:indeterminateTint="@color/colorAccent"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>